Add button to interact with and add animation and handle audio volume to increase it slowly

--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
     <title>Concert Girl In Red</title>
 </head>
 <body>
-    <section>
+    <section id="1">
         <h1>15/05/2022 20:00</h1>
+        <button data-destination="2">Següent</button>
     </section>
-    <section>
+    <section id="2">
         <h1>Sala Razzmatazz</h1>
+        <button data-destination="3">Següent</button>
     </section>
-    <section>
+    <section id="3">
         <h1>Llista d'espera...</h1>
-        <img src="img/waiting-list.jpeg" alt="Waiting list pel concert a Barcelona de la Girl In Red" width="300">
+        <img src="img/waiting-list.jpeg" alt="Waiting list pel concert a Barcelona de la Girl In Red" width="200">
+        <button data-destination="4">Següent</button>
     </section>
-    <section>
+    <section id="4">
         <h1>Fins que...</h1>
-        <img src="img/sms.jpeg" alt="SMS per comprar les entrades" width="300">
+        <img src="img/sms.jpeg" alt="SMS per comprar les entrades" width="200">
+        <button data-destination="5">Següent</button>
     </section>
-    <section>
+    <section id="5">
         <h1>If I could make it go quiet</h1>
-        <img src="img/if-i-could-make-it-go-quiet.jpg" alt="If I could make it go quiet" width="300">
+        <img src="img/if-i-could-make-it-go-quiet.jpg" alt="If I could make it go quiet" width="200">
+        <button data-destination="6">Següent</button>
     </section>
-    <section>
-        <h1></h1>
-        <img src="img/entrades.jpeg" alt="Mostra de les dues entrades al concert" . width="300">
+    <section id="6">
+        <h1>Anem al concert!</h1>
+        <img src="img/entrades.jpeg" alt="Mostra de les dues entrades al concert" . width="200">
+        <button data-destination="1">Principi</button>
     </section>
 </body>
 </html>
